<resources>
    <string name="app_name">Food Divvy</string>

    <string name="dummy_button">Map</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="todo">TODO</string>

    <string name="address">4321 Somestreet</string>
    <string name="city">Some City</string>
    <string name="description">Please buy me...</string>
    <string name="price">$6.00</string>
    <string name="name_of_location">Restaurant name</string>
    <string name="name_of_dish">tasty food name</string>



    <string name="title_activity_fullscreen">FullscreenActivity</string>
</resources>
