<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".infopage">
    <ScrollView
            android:layout_width="395dp"
            android:layout_height="715dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/name_of_dish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView8"
                        android:layout_marginRight="10px"/>
                <TextView
                        android:text="@string/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView2"/>
            </LinearLayout>
            <TextView
                    android:text="@string/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView4"/>
            <TextView
                    android:text="@string/name_of_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView7"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView5"
                        android:layout_marginRight="10px"/>
                <TextView
                        android:text="@string/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView6"
                        android:layout_marginRight="10px"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>